--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="uk">
 <head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
@@ -8,24 +8,24 @@
             var data = google.visualization.arrayToDataTable(
                 [['фрази'],
                 ['приміщеня для лекцій по програмуванню'],
-                    ['приміщеня для лекцій по дискретній математиці'],
-                    ['приміщеня для лекцій по ІСППР'],
-                    ['приміщеня для лекцій по Патентознавству та авторському праву'],
-                    ['приміщеня для практичних з програмування'],
-                    ['приміщеня для практичних з схемотехник'],
-                    ['приміщеня для практичних з ІСППР'],
-                    ['приміщеня для практичних з дискретної математики'],
-                    ['приміщеня для практичних з ООП'],
-                    ['приміщеня для адміністративних задач це деканат'],
-                    ['приміщеня для адміністративних задач це лаборантська'],
-                    ['приміщеня для адміністративних задач це кафедра'],
-                    ['приміщеня для адміністративних задач це кафедра де студент може оформити індивілуальний план'],
-                    ['приміщеня для адміністративних задач це кафедра де студент може дізнатися свої борги'],
-                    ['приміщеня для адміністративних задач це деканат де студент може взяти заліковку'],
-                    ['приміщеня для адміністративних задач це деканат де студент може дізнатися розклад'],
-                    ['приміщеня для адміністративних задач це деканат де студент може зустрітися з деканом'],
-                    ['приміщеня для адміністративних задач це лаборантська де студент може зустрітися з лаборантом'],
-                    ['приміщеня для адміністративних задач це лаборантська де студент може взяти необхідні пристрої для практиних'],
+                ['приміщеня для лекцій по дискретній математиці'],
+                ['приміщеня для лекцій по ІСППР'],
+                ['приміщеня для лекцій по Патентознавству та авторському праву'],
+                ['приміщеня для практичних з програмування'],
+                ['приміщеня для практичних з схемотехник'],
+                ['приміщеня для практичних з ІСППР'],
+                ['приміщеня для практичних з дискретної математики'],
+                ['приміщеня для практичних з ООП'],
+                ['приміщеня для адміністративних задач це деканат'],
+                ['приміщеня для адміністративних задач це лаборантська'],
+                ['приміщеня для адміністративних задач це кафедра'],
+                ['приміщеня для адміністративних задач це кафедра де студент може оформити індивілуальний план'],
+                ['приміщеня для адміністративних задач це кафедра де студент може дізнатися свої борги'],
+                ['приміщеня для адміністративних задач це деканат де студент може взяти заліковку'],
+                ['приміщеня для адміністративних задач це деканат де студент може дізнатися розклад'],
+                ['приміщеня для адміністративних задач це деканат де студент може зустрітися з деканом'],
+                ['приміщеня для адміністративних задач це лаборантська де студент може зустрітися з лаборантом'],
+                ['приміщеня для адміністративних задач це лаборантська де студент може взяти необхідні пристрої для практиних'],
                 ]
             );
             var options = {
