--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="uk">
+<html lang="uk2">
 <head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
